Basic project configuratio

--- a/GR_PROJEKT/GR_PROJEKT.csproj
+++ b/GR_PROJEKT/GR_PROJEKT.csproj
@@ -12,6 +12,9 @@
   <ItemGroup>
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
+    <None Remove="Contentless" />
+    <None Remove="Features\" />
+    <None Remove="Features\Settings\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -26,5 +29,10 @@
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
+    <PackageReference Include="Contentless" Version="3.0.5" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Features\" />
+    <Folder Include="Features\Settings\" />
   </ItemGroup>
 </Project>
