--- a/GR_Projekt/GR_Projekt.csproj
+++ b/GR_Projekt/GR_Projekt.csproj
@@ -14,6 +14,8 @@
     <None Remove="Icon.bmp" />
     <None Remove="Core\" />
     <None Remove="Settings\" />
+    <None Remove="States\" />
+    <None Remove="Core\Controls\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -32,5 +34,7 @@
   <ItemGroup>
     <Folder Include="Core\" />
     <Folder Include="Settings\" />
+    <Folder Include="States\" />
+    <Folder Include="Core\Controls\" />
   </ItemGroup>
 </Project>
