--- a/GR_Projekt/GR_Projekt.csproj
+++ b/GR_Projekt/GR_Projekt.csproj
@@ -21,6 +21,7 @@
     <None Remove="States\Settings\" />
     <None Remove="States\Settings\Components\" />
     <None Remove="States\Settings\Entities\" />
+    <None Remove="States\Settings\Models\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -46,5 +47,7 @@
     <Folder Include="States\Settings\" />
     <Folder Include="States\Settings\Components\" />
     <Folder Include="States\Settings\Entities\" />
+    <Folder Include="States\Settings\Models\" />
+    <Folder Include="bin\Debug\netcoreapp3.1\" />
   </ItemGroup>
 </Project>
